# hlinkova-garda

./: .gitignore  IMPLEMENTATION_README.md  README.md  available_anthropic_models.json  chunks.json  pdf_parser.py  pyproject.toml  submission.json  test_agent.py
chroma_db/d8c59096-b9ff-4aa7-aa8c-cdfa1b52997a/: index_metadata.pickle
chroma_db/eed27977-b9c1-430b-8e6b-fe995f962212/: index_metadata.pickle
data/: public_questions.json  sample_submission.json
data/currencies/: currency_names.json  currency_rates.json
scripts/: submit_submission.py
src/: agent.py
src/mcp_servers/: currency_converter.py  database.py  vector_db.py
src/util/: client.py  utils.py
